<?xml version="1.0" encoding="utf-8"?>
<!--
These comments will help to make sure new questions can be quickly added.
They presuppose a question has been written in strings.xml with appropriate
naming and answers.
-->
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Gold"
    tools:context="org.theappflap.basics.quiz2016.QuestionSevenActivity">
    <!--Change context to new number.
    If you haven't made the appropriate class yet, it will complain.
    You should probably make it.
    OH AND DO NOT FORGET ADDING IT TO THE ANDROIDMANIFEST.XML FILE.-->

    <TextView
        android:id="@+id/main_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_seven_text"
        android:textColor="@color/BlueViolet"
        android:textSize="@dimen/text_twenty_four" />
    <!-- Get ready to change numbers!
        Start above and change numbers below in each RadioButton.-->

    <RadioGroup
        android:id="@+id/answer_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_question"
        android:layout_marginTop="99dp"
        android:layout_marginBottom="@dimen/button_space"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/answer_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_one_text_seven"
            android:textColor="@color/BlueViolet"
            android:textSize="@dimen/text_twenty_four" />

        <RadioButton
            android:id="@+id/answer_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_two_text_seven"
            android:textColor="@color/BlueViolet"
            android:textSize="@dimen/text_twenty_four" />

        <RadioButton
            android:id="@+id/answer_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_three_text_seven"
            android:textColor="@color/BlueViolet"
            android:textSize="@dimen/text_twenty_four" />

        <RadioButton
            android:id="@+id/answer_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_four_text_seven"
            android:textColor="@color/BlueViolet"
            android:textSize="@dimen/text_twenty_four" />
    </RadioGroup>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer_group"
        android:layout_marginTop="120dp"
        android:layout_marginRight="@dimen/button_space"
        android:text="@string/submit_text"
        android:textSize="@dimen/text_30" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer_group"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="125dp"
        android:layout_marginRight="54dp"
        android:layout_toRightOf="@id/submit_button"
        android:background="@color/Yellow"
        android:text="@string/skip_text"
        android:textSize="@dimen/text_30" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:layout_alignParentBottom="true"
        />
<!--
And that's all you need to change in the XML file!
-->
</RelativeLayout>