<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_about"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Gold"
    tools:context="org.theappflap.basics.quiz2016.AboutActivity">

    <TextView
        android:id="@+id/about_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/about_one"
        android:textColor="@color/BlueViolet"
        android:textSize="@dimen/text_twenty_four" />

    <TextView
        android:id="@+id/about_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginTop="104dp"
        android:text="@string/about_two"
        android:textColor="@color/BlueViolet"
        android:textSize="@dimen/text_twenty_four" />


    <TextView
        android:id="@+id/about_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_marginTop="233dp"
        android:text="@string/about_three"
        android:textColor="@color/BlueViolet"
        android:textSize="@dimen/text_twenty_four" />


    <TextView
        android:id="@+id/about_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_marginTop="375dp"
        android:text="@string/about_four"
        android:textColor="@color/BlueViolet"
        android:textSize="@dimen/text_twenty_four" />

    <TextView
        android:id="@+id/about_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_marginTop="480dp"
        android:text="@string/about_five"
        android:textColor="@color/Red"
        android:textSize="@dimen/text_warning"
        android:textStyle="bold" />


</RelativeLayout>
